--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 <body>
     <div class="wrapper">
-       
+        <div class="top">
+            <h1>BillSplitter</h1>
+            <p>Podziel się rachunkiem ze znajomymi!</p>
+        </div>
+        <div class="bottom">
+            <label for="price">Kwota do zapłaty:</label>
+            <input type="number" id="price">
+            <label for="people">Ilośc osób:</label>
+            <input type="number" id="people">
+            <label for="tip">Napiwek:</label>
+            <select id="tip">
+                <option value="0" disabled selected>- wybierz napiwek -</option>
+                <option value="0.05">5%</option>
+                <option value="0.1">10%</option>
+                <option value="0.15">15%</option>
+                <option value="0.2">20%</option>
+            </select> 
+            <button class="count">Oblicz</button>
+            <p class="error"></p>
+            <p class="cost-info">Powinniście się złozyc po <span class="cost"></span>zł! :)</p>
+        </div>
     </div>
     <script src="js/main.js"></script>
 </body>
