--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="bottom">
             <label for="price">Kwota do zapłaty:</label>
             <input type="number" id="price">
-            <label for="people">Ilośc osób:</label>
+            <label for="people">Ilość osób:</label>
             <input type="number" id="people">
             <label for="tip">Napiwek:</label>
             <select id="tip">
@@ -28,7 +28,7 @@
             </select> 
             <button class="count">Oblicz</button>
             <p class="error"></p>
-            <p class="cost-info">Powinniście się złozyc po <span class="cost"></span>zł! :)</p>
+            <p class="cost-info">Powinniście się złożyć po <span class="cost"></span>zł! :)</p>
         </div>
     </div>
     <script src="js/main.js"></script>
